Should fix hero btn not showing full height

--- a/NM2/src/index.css
+++ b/NM2/src/index.css
@@ -2146,7 +2146,7 @@ a:nth-child(2) {
   }
 
   .hero {
-    height: 130vh;
+    height: 150vh;
     padding-bottom: 40rem;
   }
 
